; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_seafile-session.c_read_ccnet_conf.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_seafile-session.c_read_ccnet_conf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"/\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"ccnet.conf\00", align 1
@G_FILE_TEST_IS_REGULAR = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [32 x i8] c"Failed to read ccnet.conf: %s.\0A\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"General\00", align 1
@.str.4 = private unnamed_addr constant [3 x i8] c"ID\00", align 1
@.str.5 = private unnamed_addr constant [47 x i8] c"Failed to read client id from ccnet.conf: %s.\0A\00", align 1
@.str.6 = private unnamed_addr constant [5 x i8] c"NAME\00", align 1
@.str.7 = private unnamed_addr constant [49 x i8] c"Failed to read client name from ccnet.conf: %s.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8**, i8**)* @read_ccnet_conf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_ccnet_conf(i8* %0, i8** %1, i8** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i8** %2, i8*** %6, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i8* @g_build_path(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8* %10, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32* null)
  store i8* %11, i8** %7, align 8
  %12 = call i32* (...) @g_key_file_new()
  store i32* %12, i32** %8, align 8
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %9, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = load i32, i32* @G_FILE_TEST_IS_REGULAR, align 4
  %15 = call i32 @g_file_test(i8* %13, i32 %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %3
  br label %54

18:                                               ; preds = %3
  %19 = load i32*, i32** %8, align 8
  %20 = load i8*, i8** %7, align 8
  %21 = call i32 @g_key_file_load_from_file(i32* %19, i8* %20, i32 0, %struct.TYPE_5__** %9)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %29, label %23

23:                                               ; preds = %18
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @seaf_warning(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.2, i64 0, i64 0), i32 %26)
  %28 = call i32 @g_clear_error(%struct.TYPE_5__** %9)
  br label %54

29:                                               ; preds = %18
  %30 = load i32*, i32** %8, align 8
  %31 = call i8* @g_key_file_get_string(i32* %30, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0), %struct.TYPE_5__** %9)
  %32 = load i8**, i8*** %5, align 8
  store i8* %31, i8** %32, align 8
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %34 = icmp ne %struct.TYPE_5__* %33, null
  br i1 %34, label %35, label %41

35:                                               ; preds = %29
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @seaf_warning(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.5, i64 0, i64 0), i32 %38)
  %40 = call i32 @g_clear_error(%struct.TYPE_5__** %9)
  br label %54

41:                                               ; preds = %29
  %42 = load i32*, i32** %8, align 8
  %43 = call i8* @g_key_file_get_string(i32* %42, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0), %struct.TYPE_5__** %9)
  %44 = load i8**, i8*** %6, align 8
  store i8* %43, i8** %44, align 8
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %46 = icmp ne %struct.TYPE_5__* %45, null
  br i1 %46, label %47, label %53

47:                                               ; preds = %41
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %49 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = call i32 @seaf_warning(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.7, i64 0, i64 0), i32 %50)
  %52 = call i32 @g_clear_error(%struct.TYPE_5__** %9)
  br label %54

53:                                               ; preds = %41
  br label %54

54:                                               ; preds = %53, %47, %35, %23, %17
  %55 = load i8*, i8** %7, align 8
  %56 = call i32 @g_free(i8* %55)
  %57 = load i32*, i32** %8, align 8
  %58 = call i32 @g_key_file_free(i32* %57)
  ret void
}

declare dso_local i8* @g_build_path(i8*, i8*, i8*, i32*) #1

declare dso_local i32* @g_key_file_new(...) #1

declare dso_local i32 @g_file_test(i8*, i32) #1

declare dso_local i32 @g_key_file_load_from_file(i32*, i8*, i32, %struct.TYPE_5__**) #1

declare dso_local i32 @seaf_warning(i8*, i32) #1

declare dso_local i32 @g_clear_error(%struct.TYPE_5__**) #1

declare dso_local i8* @g_key_file_get_string(i32*, i8*, i8*, %struct.TYPE_5__**) #1

declare dso_local i32 @g_free(i8*) #1

declare dso_local i32 @g_key_file_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
